--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "firebase": "^7.14.0",
+    "moment": "^2.24.0",
+    "movement": "0.0.13",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^5.1.1",
